--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+.venv/
+.env
+__pycache__/
+.ipynb_checkpoints/
+.DS_Store
+data/*.json
+!data/sample_books.json
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
